<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6">

        <!-- Row 0 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            style="@style/AlexCalcButtonImportant"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:text="@string/clear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_bksp"
            style="@style/AlexCalcButtonImportant"
            android:text="@string/bksp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_up"
            style="@style/AlexCalcButtonMeta"
            android:layout_row="0"
            android:layout_column="4"
            android:text="@string/arrow_up" />

        <!-- Row 1 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_inv"
            style="@style/AlexCalcButtonMeta"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/inv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_polar"
            style="@style/AlexCalcButtonMeta"
            android:text="@string/polar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_degree"
            style="@style/AlexCalcButtonMeta"
            android:text="@string/degree" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_left"
            style="@style/AlexCalcButtonMeta"
            android:text="@string/arrow_left" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_down"
            style="@style/AlexCalcButtonMeta"
            android:text="@string/arrow_down" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_right"
            style="@style/AlexCalcButtonMeta"
            android:text="@string/arrow_right" />

        <!-- Row 2 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_alt"
            style="@style/AlexCalcButtonMeta"
            android:text="@string/alt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_log10"
            style="@style/AlexCalcButtonFunc"
            android:text="@string/log10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sin"
            style="@style/AlexCalcButtonFunc"
            android:text="@string/sin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cos"
            style="@style/AlexCalcButtonFunc"
            android:text="@string/cos" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_tan"
            style="@style/AlexCalcButtonFunc"
            android:text="@string/tan" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pow"
            style="@style/AlexCalcButtonOp"
            android:text="@string/pow" />

        <!-- Row 3 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_var"
            style="@style/AlexCalcButtonVar"
            android:text="@string/var" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ln"
            style="@style/AlexCalcButtonFunc"
            android:text="@string/ln" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sqrt"
            style="@style/AlexCalcButtonFunc"
            android:text="@string/sqrt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_lparen"
            style="@style/AlexCalcButtonOp"
            android:text="@string/lparen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_rparen"
            style="@style/AlexCalcButtonOp"
            android:text="@string/rparen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_div"
            style="@style/AlexCalcButtonOp"
            android:text="@string/div" />

        <!-- Row 4 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_units"
            style="@style/AlexCalcButtonVar"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/units" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pi"
            style="@style/AlexCalcButtonVar"
            android:text="@string/pi" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mult"
            style="@style/AlexCalcButtonOp"
            android:text="@string/mult" />

        <!-- Row 5 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_var1"
            style="@style/AlexCalcButtonVar"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/var_x" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_e"
            style="@style/AlexCalcButtonVar"
            android:text="@string/e" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sub"
            style="@style/AlexCalcButtonOp"
            android:text="@string/sub" />

        <!-- Row 6 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ans"
            style="@style/AlexCalcButtonVar"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/ans" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_neg"
            style="@style/AlexCalcButtonNum"
            android:text="@string/neg" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            style="@style/AlexCalcButtonOp"
            android:text="@string/add" />

        <!-- Row 7 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sto"
            style="@style/AlexCalcButtonOp"
            android:text="@string/store" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_img_unit"
            style="@style/AlexCalcButtonNum"
            android:text="@string/img_unit_i" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/AlexCalcButtonNum"
            android:text="@string/num0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_decimal"
            style="@style/AlexCalcButtonNum"
            android:text="@string/decimal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_exp"
            style="@style/AlexCalcButtonNum"
            android:text="@string/exp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_enter"
            style="@style/AlexCalcButtonImportant"
            android:text="@string/enter" />

</GridLayout>