<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/preference_key_theme_select"
        android:title="@string/colour_theme_pref_label"
        android:entries="@array/colour_themes"
        android:entryValues="@array/colour_themes"/>
    <ListPreference
        android:key="@string/preference_key_haptics"
        android:title="@string/haptic_pref_label"
        android:entries="@array/haptic_pref_options"
        android:entryValues="@array/haptic_pref_options"/>
    <ListPreference
        android:key="@string/preference_key_fg_override"
        android:title="Foreground Override (debug)"
        android:entries="@array/fg_override_options"
        android:entryValues="@array/fg_override_options"/>
</PreferenceScreen>